--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -1,10 +1,11 @@
 .about {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
-  padding: 2rem;
-  flex-wrap: wrap;
+  /* padding: 2rem; */
+  /* flex-wrap: wrap; */
 }
 .head {
   color: rgb(17, 20, 20);
@@ -13,11 +14,11 @@
   color: #ccdcf6;
   letter-spacing: 2px;
   transition: all 0.2s ease;
-  &:hover {
-    color: #ffffff;
-    /* transform: translateY(-4px); */
-    filter: drop-shadow(0 2px 2px rgba(41, 182, 182, 0.4));
-  }
+}
+.head:hover {
+  color: #ffffff;
+  /* transform: translateY(-4px); */
+  filter: drop-shadow(0 2px 2px rgba(41, 182, 182, 0.4));
 }
 /* Paragraph styling */
 .about h5 {
@@ -55,7 +56,6 @@
   border-radius: 20px 0 20px 0px;
 }
 
-/* Hover effect */
 .image img:hover {
   transform: scale(1.05);
 }
@@ -63,7 +63,7 @@
 /* Small screens */
 @media (max-width: 768px) {
   .about {
-    flex-direction: column-reverse; /* image below text */
+    flex-direction: column-reverse; 
     text-align: center;
   }
 
@@ -76,6 +76,7 @@
     width: 70%; /* take full width on mobile */
     max-width: 300px; /* neat size */
     height: auto;
+    margin-left:4rem;
     transition: transform 0.3s ease;
     border-radius: 10px;
   }
