--- a/src/Components/Experience/Experience.module.css
+++ b/src/Components/Experience/Experience.module.css
@@ -19,11 +19,11 @@
   color: #ccdcf6;
   letter-spacing: 2px;
   transition: all 0.2s ease;
-  &:hover {
-    color: #ffffff;
-    /* transform: translateY(-4px); */
-    filter: drop-shadow(0 2px 2px rgba(41, 182, 182, 0.4));
-  }
+}
+.heading:hover {
+  color: #ffffff;
+  /* transform: translateY(-4px); */
+  filter: drop-shadow(0 2px 2px rgba(41, 182, 182, 0.4));
 }
 /* Individual Experience Box */
 .ExperienceBox {
@@ -44,9 +44,9 @@
 /* Image Styling */
 .ExperienceImage {
   width: 100%;
-  height: 420px;
-  border-radius: 10px;
-  object-fit: cover;
+  height: 400px;
+  border-radius: 8px;
+  /* object-fit: cover; */
   margin-bottom: 1rem;
   transition: transform 0.3s ease;
 }
@@ -70,10 +70,10 @@
   box-shadow: 10px 12px 8px rgba(195, 51, 51, 0.05);
 }
 .Description:hover {
-  background-color: #f1faff; /* soft light blue highlight */
+  background-color: #f1faff; 
   transform: scale(1.02);
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
-  color: #0d3b66; /* deep blue for text */
+  color: #0d3b66;
   cursor: default;
   font-weight: 500;
 }
