--- a/src/Components/Projects/Project2/ProjectStructure2.module.css
+++ b/src/Components/Projects/Project2/ProjectStructure2.module.css
@@ -11,29 +11,19 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-/* @media(max-width:600px){
-  .card{
-    display: flex;
-  }
-} */
-/* .centered {
-  text-align: center;
-  width: 100%;
-  margin-left:2rem;
-} */
 .centered {
   width: 100%;
-  margin-left:2rem;
+  margin-left: 1rem;
   font-size: x-large;
   text-align: center;
   color: #ccdcf6;
   letter-spacing: 3px;
   transition: all 0.2s ease;
-  &:hover {
-    color: #ffffff;
-    /* transform: translateY(-4px); */
-    filter: drop-shadow(0 2px 2px rgba(41, 182, 182, 0.4));
-  }
+}
+.centered:hover {
+  color: #ffffff;
+  /* transform: translateY(-4px); */
+  filter: drop-shadow(0 2px 2px rgba(41, 182, 182, 0.4));
 }
 .card:hover {
   transform: scale(1.05);
@@ -103,7 +93,7 @@
   background-color: transparent;
   border: 2px solid #ccdcf6;
   border-radius: 4px;
-  font-size:x-large;
+  font-size: x-large;
   color: white;
   text-decoration: none;
   font-weight: bold;
