--- a/src/Components/Projects/Project3/ProjectStructure3.module.css
+++ b/src/Components/Projects/Project3/ProjectStructure3.module.css
@@ -75,21 +75,20 @@
   /* margin-left:4rem; */
   gap: 0.4rem;
   padding: 0.4rem 0.8rem;
-    background: linear-gradient(135deg, #579c9c, #6b806e);
-
+  background: linear-gradient(135deg, #579c9c, #6b806e);
   border: 1px solid #ccdcf6;
   border-radius: 2px;
   /* color: #ccdcf6; */
-  color:black;
+  color: black;
   text-decoration: none;
   /* font-weight: bold; */
   transition: all 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-  &:hover{
+}
+.button:hover {
   background: linear-gradient(135deg, #78534c, #a9a784);
   transform: scale(1);
   box-shadow: 0 6px 14px rgba(0, 0, 0, 0.35);
-  }
 }
 /* Responsive styling */
 @media (max-width: 1024px) {
@@ -110,7 +109,7 @@
   justify-content: center;
   align-items: flex-start;
   gap: 3rem;
-  margin-left: 2rem;
+  margin-left: 2.6rem;
   margin-right: 2rem;
 }
 
